# ai-summit-team11

./: .gitignore  Dockerfile  README.md  SCOPE.md  SPEC.md  SYSTEM_DESIGN.md  pyproject.toml  requirements.txt  sdd.md  skills-lock.json
.agent/skills/: adk-eval-guide  adk-observability-guide  adk-scaffold
.agents/skills/adk-cheatsheet/references/: python.md
.agents/skills/adk-deploy-guide/: SKILL.md
.agents/skills/adk-observability-guide/: SKILL.md
.agents/skills/adk-scaffold/: SKILL.md
.claude/: settings.local.json
.claude/skills/: adk-cheatsheet
.windsurf/skills/: adk-deploy-guide  adk-dev-guide
app/: .env  main.py  tools.py
backend/: .env  .env.example  agent.py  main.py  tools.py
backend/.adk/: session.db
docs/: SPEC.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/backend/.adk/: session.db
frontend/src/: App.module.css  App.tsx  api.ts  index.css
frontend/src/components/: InputField.module.css  InputField.tsx  LogPanel.module.css  LogPanel.tsx  Phase.module.css  Phase1.tsx  Phase2.tsx  ResultsPanel.module.css  ResultsPanel.tsx
sample-content/: serverless-ai-agents.html
