[project]
name = "ai-summit-team11"
version = "0.1.0"
description = "End-to-End Content Engine: AI-powered SEO strategy & campaign generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]
